# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.581 2006/02/21 19:50:22 wolf31o2 Exp $

  21 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/livecdfs-update.sh:
  Added wrapping around the udev sed for those crazy 2.4-users.

  17 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/livecdfs-update.sh:
  Added sed fix for udev starting evms_activate unconditionally. This is
  2.0_rc39.

  17 Feb 2006; Eric Edgar <rocket@gentoo.org> modules/stage4_target.py:
  add stage4/unmerge stage4/rm to valid options

  15 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/rc-update.sh:
  Added fix for bug #122154 from Rajiv Manglani.

  15 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/kmerge.sh:
  Fixed creation of kernelpkgs.txt for the Installer.

  14 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  livecd/cdtar/elilo-3.4-cdtar.tar.bz2:
  Updated elilo tarball for IA64.

  14 Feb 2006; Eric Edgar <rocket@gentoo.org> modules/snapshot_target.py:
  DIGESTS support for snapshot creation

  14 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc38, codenamed: When will the stinking release
  candidates ever end?

  14 Feb 2006; Eric Edgar <rocket@gentoo.org> modules/grp_target.py:
  fix for .DIGESTS.DIGESTS issue in grp

  14 Feb 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix for failure when root_overlay is not set

  14 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  targets/support/bootloader-setup.sh:
  Added IA64/SGI patch from plasmaroo.

  13 Feb 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/livecd-stage1/livecd-stage1-controller.sh,
  targets/support/kmerge.sh, targets/support/livecdfs-update.sh:
  Fixed generation of grppkgs.txt and kernelpkgs.txt for the Installer. This
  is 2.0_rc37.
